k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    name: sandbox
    environment: sandbox
    app: roastme
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    environment: production
    app: roastme
